--- a/store_frontend/package.json
+++ b/store_frontend/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
+    "react-table": "^6.8.6",
     "react-test-renderer": "^16.4.2",
     "reactstrap": "^6.3.1",
     "redux": "^4.0.0",
