--- a/store_frontend/src/views/Products/ProductForm/package.json
+++ b/store_frontend/src/views/Products/ProductForm/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Forms",
+  "name": "Alerts",
   "version": "0.0.0",
   "private": true,
-  "main": "./Forms.js"
+  "main": "./Alerts.js"
 }
