--- a/store_frontend/package.json
+++ b/store_frontend/package.json
@@ -30,6 +30,7 @@
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.4.2",
     "react-loadable": "^5.4.0",
+    "react-notifications": "^1.4.3",
     "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
