--- a/store_frontend/package.json
+++ b/store_frontend/package.json
@@ -38,6 +38,7 @@
     "react-test-renderer": "^16.4.2",
     "reactstrap": "^6.3.1",
     "redux": "^4.0.0",
+    "redux-form": "^8.3.2",
     "redux-localstorage": "^0.4.1",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
